--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,10 @@ environment:
 dependencies:
   app_links: ^3.5.0
   audio_service: ^0.18.12
-  audiotagger:
-    git:
-      url: https://github.com/Sangwan5688/Audiotagger
-      ref: 90f2db5
+  audiotagger: ^2.2.1
+    #git:
+      #url: https://github.com/Sangwan5688/Audiotagger
+      #ref: 90f2db5
   # bitsdojo_window: ^0.1.1+1 #For Desktops
   cached_network_image: ^3.3.0
   carousel_slider: ^4.2.1
@@ -53,10 +53,10 @@ dependencies:
   palette_generator: ^0.3.3+3
   path_provider: ^2.1.1
   permission_handler: ^11.1.0
-  persistent_bottom_nav_bar:
-    git:
-      url: https://github.com/Sangwan5688/PersistentBottomNavBar
-      ref: ecdadb0
+  persistent_bottom_nav_bar: ^6.2.1
+    #git:
+      #url: https://github.com/Sangwan5688/PersistentBottomNavBar
+      #ref: ecdadb0
   receive_sharing_intent: ^1.4.5
   share_plus: ^7.2.1
   sizer: ^2.0.15
