--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,16 @@
 buildscript {
-   ext.kotlin_version = '1.8.22'
+    ext.kotlin_version = '1.8.22'
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-       classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath 'com.android.tools.build:gradle:7.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // Add the Flutter Gradle plugin
+        classpath 'com.android.tools.build:gradle:7.3.0'
+        classpath "dev.flutter.flutter-gradle-plugin:2.0.0"
     }
 }
 
