--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,9 +1,3 @@
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'dev.flutter.flutter-gradle-plugin'
-}
-
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
@@ -27,7 +21,12 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+}
 
+apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 def keystoreProperties = new Properties()
 def keystorePropertiesFile = rootProject.file('key.properties')
@@ -39,6 +38,15 @@ android {
     namespace "com.shadow.blackhole"
     compileSdkVersion 33
     ndkVersion "21.4.7075529"
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
